update quiz with pagination, update quiz question.js with correct format as not showing any correct answers in quiz, add next and previous buttons to quiz

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,7 +170,7 @@ a:hover {
     background-color: aqua;
 }
 
-#submit
+#submit, #previous, #next
 {
 
     position: relative;
@@ -214,6 +214,27 @@ a:hover {
     width: 120px;
     vertical-align:middle;
 }
+/* CSS to style the question slides */
+
+.slide{
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.5s;
+  }
+  .active-slide{
+    opacity: 1;
+    z-index: 2;
+  }
+  .quiz-container{
+    position: relative;
+    height: 200px;
+    margin-top: 40px;
+  }
+
 
 /* Custom CSS for Footer - Boostrap template and styled with Custom CSS*/
 
